--- a/index.html
+++ b/index.html
@@ -1,59 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+  	<head>
 		<meta charset="utf-8">
-  		<title>ABISHEK PS</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<!-- Favicons -->
-		<link href="assets/img/icon.png" rel="icon">
-
-  		<!-- Google Fonts -->
-  		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  		<!-- Template Main CSS File -->
-  		<link href="assets/css/style.css" rel="stylesheet">
-	</head>
+		<title>Abishek</title>
+		<link rel="icon" type="image/icon" href="assets/images/abi.png"/>		
+		<link href="assets/css/style.css" rel="stylesheet">
+  	</head>
 
 	<body>
-		<!-- ======= Header ======= -->
-		<header id="header" class="fixed-top ">
 
-			<div class="container d-flex align-items-center justify-content-lg-between">
-				<div class="abkele">
-					<span class="abkeleglow">
-						<img src="assets/img/icon.png" alt="Logo" height="30">
-						Abishek PS
-					</span>
-				</div>
+		<div class="navbar">
+			<p><a class="glitch" href=""><img src="assets/images/abi.png" width="50px">Abishek PS</a></p>
+			<a class="link glitch" href="">Home</a>
+			<a class="link glitch" href="">About Me</a>
+			<a class="link glitch" href="">Portfolio</a>
+		</div>
 
-				<nav id="navbar" class="navbar order-last order-lg-0">
-					<ul>
-						<li><a class="nav-link scrollto active" href="">Home</a></li>
-						<li><a class="nav-link scrollto" href="">About</a></li>
-						<li><a class="nav-link scrollto" href="">Process</a></li>
-						<li><a class="nav-link scrollto " href="">Portfolio</a></li>
-						<li><a class="nav-link scrollto" href="">Proprietor</a></li>
-						<li><a class="nav-link scrollto" href="">Contact US</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
 
-		<!-- ======= Footer ======= -->
-		<footer id="footer">
-			<div class="footer-top">
-				<div class="container">
-					<div class="row">
 
-						<div class="col-lg-3 col-md-6">
-							<div class="footer-info">
-								<img src="assets/img/icon.png" alt="" width="100">
-								<img src="assets/img/logo.png" alt="" width="160">
-							</div>
-						</div>
-					</div>
-				</div>
+
+
+
+		<footer>
+			<div class="footer">
+				<p>&copy; Copyright <strong>ABISHEK PS</strong> All rights reserved</p>
 			</div>
 		</footer>
-	</body>
+
+  	</body>
 </html>
