--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<footer>
 			<div class="footer">
 				<p>&copy; Copyright <strong>ABISHEK PS</strong> All rights reserved</p>
+				UNDER DEVELOPMENT
 			</div>
 		</footer>
 
